--- a/index.html
+++ b/index.html
@@ -12,50 +12,41 @@
         <div class="header">
             <a href="#"><img src="iframe/image/logo.png" alt="logo"></a>
             <ul class="ul1">
+                <nav>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">ARTICLES</a></li>
                 <li><a href="#">SABSCRIBE</a></li>
+            </nav>
            </ul>
         <a class="vector" href="#"><img src="iframe/image/vector.png" alt=""></a>
         </div>
-        <p>Thank you so much for being here! We <br> are passionate about Slow Travel and <br>
+        <p>Thank you so much for being here! We <br class="br1"> are passionate <br class="br2"> about Slow Travel and <br class="br3">
               making travel a priority. </p>
-            
-        
     </header>
     <main>
         <h1>Latest articles</h1>
         <div class="div">
-        <section class="section1">
             <img src="iframe/image/11.png" alt="1">
-        </section>
-        <section class="section2">
             <img src="iframe/image/22.png" alt="2">
-        </section>
-        <section class="section3">
             <img src="iframe/image/33.png" alt="3">
-        </section>
+
     </div>
     </main>
     <div class="main">
         <h1>ABOUT</h1>
         <div class="main2">
-        <section class="section4">
-            <img src="iframe/image/4.png" alt="4">
-        </section>
-        <section class="section5">
-            <p>Have you ever seen a beach with black sand? Because of constant volcanic activity, you'll find white sands and black sands on the island of Hawaiʻi.
+            <img src="iframe/image/44.png" alt="4">
+            <p class="P">Have you ever seen a beach with black sand? Because of constant volcanic activity, you'll find white sands and black sands on the island of Hawaiʻi.
                  Punaluʻu Black Sand Beach is one of the most famous black sand beaches in Hawaiʻi.</p>
-        </section>
-    </div>
+        </div>
     </div>
     <footer>
-         <a class="" href="#"><img class="footer" src="iframe/image/l.png" alt="logo"></a>
-         <ul>
+         <a href="#"><img class="footer" src="iframe/image/l.png" alt="logo"></a>
+    <ul class="footer2">
          <li><a href="#"><img src="iframe/image/mail.png" alt="mail"></a></li>
-        <li><a href="#"><img src="iframe/image/fb.png" alt="facebook"></a></li>
-        <li><a href="#"><img src="iframe/image/insta.png" alt="instagram"></a></li>
-        </ul>
+         <li><a href="#"><img src="iframe/image/fb.png" alt="facebook"></a></li>
+         <li><a href="#"><img src="iframe/image/insta.png" alt="instagram"></a></li>
+    </ul>
     </footer>
    
 </body>
